test/compile_errors/err_collection_literal_empty_map_no_expected.w
//! expect-check-fail: empty map literal requires expected HashMap type

fn main:
    let values = [:]
